<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.newsports.Fragments.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.newsports.Fragments.Store"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.newsports.Fragments.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.newsports.Fragments.Booking"
        android:label="Booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_collaboration"
        android:name="com.example.newsports.Fragments.Collaboration"
        android:label="Collaboration"
        tools:layout="@layout/fragment_collaboration" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.newsports.Fragments.About"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.newsports.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_lookingFor"
            app:destination="@id/navigation_lookingFor" />
    </fragment>

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.newsports.Fragments.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" >
        <action
            android:id="@+id/action_navigation_post_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
    </fragment>

    <fragment
        android:id="@+id/navigation_lookingFor"
        android:name="com.example.newsports.Fragments.LookingFor"
        android:label="@string/title_lookingFor"
        tools:layout="@layout/fragment_looking_for" >
        <action
            android:id="@+id/action_navigation_lookingFor_to_navigation_post"
            app:destination="@id/navigation_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.newsports.Fragments.Message"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.newsports.Fragments.Schedule"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_navigation_message"
            app:destination="@id/navigation_message" />
    </fragment>
</navigation>