<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <TextView-->
<!--                android:id="@+id/toolbarNameTV"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:text="username"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold" />-->

<!--            &lt;!&ndash; <ImageButton-->
<!--                 android:id="@+id/sendBtn"-->
<!--                 android:layout_width="wrap_content"-->
<!--                 android:layout_height="wrap_content"-->
<!--                 android:layout_alignParentEnd="true"-->
<!--                 android:layout_alignParentRight="true"-->
<!--                 android:layout_centerVertical="true"-->
<!--                 android:layout_margin="12dp"-->
<!--                 android:background="@drawable/ic_menu"-->
<!--                 android:contentDescription="@null" />&ndash;&gt;-->

<!--        </RelativeLayout>-->
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:src="@drawable/logo"
                app:civ_border_color="#76D1FA"
                app:civ_border_width="1dp" />

            <ImageButton
                android:id="@+id/edit_profileImage"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignEnd="@id/profileImage"
                android:layout_alignRight="@id/profileImage"
                android:layout_alignBottom="@id/profileImage"
                android:background="@drawable/baseline_circle_24"
                android:elevation="3dp"
                android:src="@drawable/baseline_edit_24"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="4dp"
                android:text="Yograj Pagar"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="4dp"
                android:text="Cricketer"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/combinedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1">

        <LinearLayout
            android:id="@+id/countLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followingCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followersCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="2"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startChatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/btn_bg"
                android:minWidth="160dp"
                android:text="Say Hi !"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/followBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/btn_bg"
                android:minWidth="160dp"
                android:text="Edit profile"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/combinedLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="#C8C8C8" />

    <TextView
        android:id="@+id/about_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="About : "
        android:layout_below="@id/view"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="Playing Role: All-rounder (Batsman and Medium Pace Bowler) Batting Style: Right-handed Bowling Style: Right-arm medium pace"
        android:layout_below="@id/about_tag"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/achivementstag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="Achivements : "
        android:layout_below="@id/about"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/achivements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="1. Made debut for the Maharashtra state team at the age of 19.
2. Achieved the milestone of scoring a century .
3. Man-off the match in 6 Matches"
        android:layout_below="@id/achivementstag"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/achivements"
        android:layout_marginTop="30dp" />
</RelativeLayout>